--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
@@ -25,36 +24,37 @@
   <div class="wrapper">
     <!-- Header -->
     <header class="header">
-        <div class="container">
-    <div class="header__nav">
-      <div class="nav__logo">
-        <h2 class="logo__title"><a href="" onclick="return false">Cozy House</a></h2>
-        <p class="logo__subtitle">Shelter for pets in Boston</p>
-      </div>
+      <div class="container">
+        <div class="head">
+          <div class="logo">
+            <h2 class="logo__title"><a href="" onclick="return false">Cozy House</a></h2>
+            <p class="logo__subtitle">Shelter for pets in Boston</p>
+          </div>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link active">About the shelter</a>
-          </li>
-          <li class="nav__item">
-            <a href="pets.html" class="nav__link hover-link__light">Our pets</a>
-          </li>
-          <li class="nav__item">
-            <a href="#help" class="nav__link hover-link__light">Help the shelter</a>
-          </li>
-          <li class="nav__item">
-            <a href="#contacts" class="nav__link hover-link__light">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <button type="button" class="nav__icon">
-        <div class="menu-icon-wrapper">
-          <div class="menu-icon"></div>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link nav__link--active">About the shelter</a>
+              </li>
+              <li class="nav__item">
+                <a href="pets.html" class="nav__link nav__link--hover-light">Our pets</a>
+              </li>
+              <li class="nav__item">
+                <a href="#help" class="nav__link nav__link--hover-light">Help the shelter</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link nav__link--hover-light">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+
+          <button class="icon" type="button" >
+            <div class="icon__wrapper">
+              <div class="icon__menu"></div>
+            </div>
+          </button>
         </div>
-      </button>
-    </div>
-        </div>
+      </div>
     </header>
 
     <!-- Start page -->
