refactor: change BEM in blocs

--- a/pets.html
+++ b/pets.html
@@ -23,7 +23,7 @@
 <body>
   <div class="wrapper">
     <!-- Header -->
-    <header class="header header-pets">
+    <header class="header header--pets">
         <div class="container">
           <div class="head head--pets">
             <div class="logo">
@@ -60,92 +60,92 @@
       <!-- Our friends -->
       <section class="friends" id="friends">
         <div class="container">
-          <div class="friends__column pets-friends__column container__page">
+          <div class="friends__column friends__column--pets container__page">
             <h2 class="friends__title title">Our friends who <br>are looking for a house</h2>
-            <div class="pets__list">
-              <div class="slider__card pets-slider__card">
+            <div class="list--pets">
+              <div class="card card--pets">
                 <div class="card__image">
                   <img src="image/pets/pets-katrine.png" alt="katrine">
                 </div>
                 <h3 class="card__name">Katrine</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card pets-slider__card">
+              <div class="card card--pets">
                 <div class="card__image">
                   <img src="image/pets/pets-jennifer.png" alt="jennifer">
                 </div>
                 <h3 class="card__name">Jennifer</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card pets-slider__card">
+              <div class="card card--pets">
                 <div class="card__image">
                   <img src="image/pets/pets-woody.png" alt="woody">
                 </div>
                 <h3 class="card__name">Woody</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card sophia">
+              <div class="card sophia">
                 <div class="card__image">
                   <img src="image/pets/pets-sophia.png" alt="sophia">
                 </div>
                 <h3 class="card__name">Sophia</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card timmy">
+              <div class="card timmy">
                 <div class="card__image">
                   <img src="image/pets/pets-timmy.png" alt="timmy">
                 </div>
                 <h3 class="card__name">Timmy</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card charly">
+              <div class="card charly">
                 <div class="card__image">
                   <img src="image/pets/pets-charly.png" alt="charly">
                 </div>
                 <h3 class="card__name">Charly</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card scarlett">
+              <div class="card scarlett">
                 <div class="card__image">
                   <img src="image/pets/pets-scarlett.png" alt="scarlett">
                 </div>
                 <h3 class="card__name">Scarlett</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
 
-              <div class="slider__card freddie">
+              <div class="card freddie">
                 <div class="card__image">
                   <img src="image/pets/pets-freddie.png" alt="freddie">
                 </div>
                 <h3 class="card__name">Freddie</h3>
-                <button class="card__button button__border">Learn more</button>
+                <button class="button button-border card__button">Learn more</button>
               </div>
             </div>
 
             <div class="navigation">
-              <button class="navigation__button inactive__button" disabled>
+              <button class="navigation__button button--inactive" disabled>
                 &lt;&lt;
               </button>
 
-              <button class="navigation__button inactive__button" disabled>
+              <button class="navigation__button button--inactive" disabled>
                 &lt;
               </button>
 
-              <button class="navigation__button active__button" disabled>
+              <button class="navigation__button button--active" disabled>
                 1
               </button>
 
-              <button class="navigation__button aviable__button" disabled>
+              <button class="navigation__button button--aviable" disabled>
                 &gt;
               </button>
 
-              <button class="navigation__button aviable__button" disabled>
+              <button class="navigation__button button--aviable" disabled>
                 &gt;&gt;
               </button>
             </div>
