feat: add logic to the mobile menu

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
           <button class="icon" type="button" >
             <div class="icon__wrapper">
-              <div class="icon__menu"></div>
+              <div class="icon__menu">
+							</div>
             </div>
           </button>
         </div>
@@ -307,5 +308,7 @@
       </div>
     </footer>
   </div>
+
+	<script src="index.js"></script>
 </body>
 </html>
