--- a/pets.html
+++ b/pets.html
@@ -31,7 +31,7 @@
               <p class="logo__subtitle logo__subtitle--pets">Shelter for pets in Boston</p>
             </div>
 
-            <nav class="nav">
+            <nav class="nav nav--pets">
               <ul class="nav__list nav__list--pets">
                 <li class="nav__item">
                   <a href="index.html" class="nav__link nav__link--hover-dark">About the shelter</a>
@@ -214,5 +214,6 @@
       </div>
     </footer>
   </div>
+	<script src="index.js"></script>
 </body>
 </html>	
